re PR tree-optimization/87700 (Compile time hog w/ -O1)

2018-10-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/87700
	* tree-ssa-copy.c (set_copy_of_val): Fix change detection logic.

	* gcc.dg/torture/pr87700.c: New testcase.

From-SVN: r265417